@@ -1,11 +1,9 @@
 package com.inno.serialport.function
 
 import com.inno.common.utils.toHexString
-import com.inno.serialport.utilities.ComponentList
-import com.inno.serialport.utilities.ProductInfo
-import com.inno.serialport.utilities.SingleComponent
-import com.inno.serialport.utilities.SingleTree
-import com.inno.serialport.utilities.TreeList
+import com.inno.serialport.utilities.ComponentProfile
+import com.inno.serialport.utilities.ComponentProfileList
+import com.inno.serialport.utilities.ProductProfile
 import com.inno.serialport.utilities.fcstab
 import kotlinx.serialization.encodeToString
 import kotlinx.serialization.json.Json
@@ -14,34 +12,33 @@ import java.nio.ByteOrder
 import java.util.concurrent.locks.ReentrantLock
 import kotlin.concurrent.withLock
 
-//private const val MAX_BYTEARRAY_SIZE = 265 // 256 + 9
-private const val MAX_COMPONENT = 4
-private const val MAX_TREE = 4
-
-// ComponentList = 2 + SingleComponent: (2 + 2 * 4)*MaxComponent
-// TreeList = 2 + SingleTree: (2 * 5)*MaxTree
-// CAPACITY = productId + ComponentList + TreeList
-private const val COMMAND_BUFFER_CAPACITY =
-    6 + 10 * MAX_COMPONENT + 10 * MAX_TREE
+private const val MAX_COMPONENT: Short = 7
+// ProductProfile = id2 + preFlush2 + postFlush2 + ComponentProfileList: num2 + MAX_COMPONENT * (comid2 + 2*para6)
+private const val COMMAND_BUFFER_CAPACITY = 8 + 14 * MAX_COMPONENT
+// 6 = addr1 + control1 + len2 + cmd2
+private const val CONTENT_BUFFER_CAPACITY = COMMAND_BUFFER_CAPACITY + 6
+// 8 = addr1 + control1 + len2 + cmd2 + crc2
 private const val TOTAL_BUFFER_SIZE = COMMAND_BUFFER_CAPACITY + 8
 private const val PACK_BUFFER_SIZE = TOTAL_BUFFER_SIZE + 16
 private const val FRAME_FLAG = 0x7E.toByte()
 private const val FRAME_ADDRESS = 0x2.toByte()
 private const val FRAME_CONTROL = 0X1.toByte()
 private val lock = ReentrantLock()
+private val serializeBuffer = ByteBuffer.allocate(COMMAND_BUFFER_CAPACITY)
+private val contentBuffer = ByteBuffer.allocate(CONTENT_BUFFER_CAPACITY)
 private val commandBuffer = ByteBuffer.allocate(TOTAL_BUFFER_SIZE)
 private val packBuffer = ByteBuffer.allocate(PACK_BUFFER_SIZE)
-private val serializeBuffer = ByteBuffer.allocate(COMMAND_BUFFER_CAPACITY)
 
 fun main() {
     testProductCommand()
 }
 
 fun testProductCommand() {
-    val info = createInfo()
+    val info = createProductProfile()
     println("info: $info")
     val command = Json.encodeToString(info)
     println("string: $command")
+    contentBuffer.order(ByteOrder.LITTLE_ENDIAN)
     commandBuffer.order(ByteOrder.LITTLE_ENDIAN)
     packBuffer.order(ByteOrder.LITTLE_ENDIAN)
     serializeBuffer.order(ByteOrder.LITTLE_ENDIAN)
@@ -49,20 +46,22 @@ fun testProductCommand() {
     lock.withLock {
         val serializeProductInfo = serializeProductInfo(command)
         println("serialize: " + toHexString(serializeProductInfo))
-        commandBuffer.clear()
-        commandBuffer.put(FRAME_ADDRESS)
-        commandBuffer.put(FRAME_CONTROL)
+        contentBuffer.clear()
+        contentBuffer.put(FRAME_ADDRESS)
+        contentBuffer.put(FRAME_CONTROL)
         // length
-        commandBuffer.putShort((COMMAND_BUFFER_CAPACITY + 2).toShort())
+        contentBuffer.putShort((COMMAND_BUFFER_CAPACITY + 2).toShort())
         println("size: ${COMMAND_BUFFER_CAPACITY + 2}")
         // cmd
-        commandBuffer.putShort(0x64.toShort())
-        commandBuffer.put(serializeProductInfo)
+        contentBuffer.putShort(0x64.toShort())
+        contentBuffer.put(serializeProductInfo)
         // crc
-        val crc = calculateCRC(commandBuffer)
+        val crc = calculateCRC(contentBuffer)
         println("crc ${Integer.toHexString(crc.toInt())}")
+        commandBuffer.clear()
+        commandBuffer.put(contentBuffer.array())
         commandBuffer.putShort(crc)
-        println("pack:      ${commandBuffer.toHexString()}")
+        println("command:   ${commandBuffer.toHexString()}")
 
         packBuffer.clear()
         packBuffer.put(FRAME_FLAG)
@@ -77,85 +76,66 @@ fun testProductCommand() {
     }
 }
 
-fun createInfo(): ProductInfo {
-    val productInfo = ProductInfo(
+fun createProductProfile(): ProductProfile {
+    val profile = ProductProfile(
         productId = 0x01,
-        componentList = ComponentList(
-            componentNum = 4,
-            singleComponent = listOf(
-                SingleComponent(
-                    componentId = 0x0bb8,
-                    dosage = shortArrayOf(
-                        0x347e.toShort(),
-                        0x787d.toShort(),
-                        0xCDAB.toShort(),
-                        0xEEEF.toShort()
-                    )
+        preFlush = 0,
+        postFlush = 0,
+        componentProfileList = ComponentProfileList(
+            componentNum = MAX_COMPONENT,
+            componentList = listOf(
+                ComponentProfile(
+                    componentId = 0xbb8,
+                    para = shortArrayOf(
+                        0x8c.toShort(),
+                        0, 0, 0, 0, 0
+                    ),
                 ),
-                SingleComponent(
+                ComponentProfile(
                     componentId = 0x3e8,
-                    dosage = shortArrayOf(
-                        0x34bb.toShort(),
-                        0x7856.toShort(),
-                        0xCDAB.toShort(),
-                        0xEEEF.toShort()
+                    para = shortArrayOf(
+                        0x14.toShort(),
+                        0x320.toShort(),
+                        0x7d0.toShort(),
+                        0, 0, 0
                     )
                 ),
-                SingleComponent(
+                ComponentProfile(
                     componentId = 0x7d0,
-                    dosage = shortArrayOf(
-                        0x34bb.toShort(),
-                        0x7856.toShort(),
-                        0xCDAB.toShort(),
-                        0xEEEF.toShort()
+                    para = shortArrayOf(
+                        0x32.toShort(),
+                        0x96.toShort(),
+                        0, 1, 0, 0
                     )
                 ),
-                SingleComponent(
-                    componentId = 0xfa0,
-                    dosage = shortArrayOf(
-                        0x34bb.toShort(),
-                        0x7856.toShort(),
-                        0xCDAB.toShort(),
-                        0xEEEF.toShort()
+                ComponentProfile(
+                    componentId = 0x1388,
+                    para = shortArrayOf(
+                        0, 0, 0, 0, 0, 0
                     )
-                )
-            )
-        ),
-        treeList = TreeList(
-            treeLen = 4,
-            singleTree = listOf(
-                SingleTree(
-                    treeNr = 0x0,
-                    componentId = 0xb8b,
-                    sendComponentId = 0x0,
-                    receiveComponentId = 0x3e8,
-                    conflictComponentId = 0x0
                 ),
-                SingleTree(
-                    treeNr = 0x01,
-                    componentId = 0x3e8,
-                    sendComponentId = 0xb8b,
-                    receiveComponentId = 0x0,
-                    conflictComponentId = 0x0
-                ),
-                SingleTree(
-                    treeNr = 0x02,
+                ComponentProfile(
                     componentId = 0xfa0,
-                    sendComponentId = 0x0,
-                    receiveComponentId = 0x0,
-                    conflictComponentId = 0x0
+                    para = shortArrayOf(
+                        0, 0, 0, 0, 0, 0
+                    )
                 ),
-                SingleTree(
-                    treeNr = 0x03,
-                    componentId = 0x7d0,
-                    sendComponentId = 0x0,
-                    receiveComponentId = 0x3e8,
-                    conflictComponentId = 0x0
-                )
+                ComponentProfile(
+                    componentId = 0xfa2,
+                    para = shortArrayOf(
+                        0, 0, 0, 0, 0, 0
+                    )
+                ),
+                ComponentProfile(
+                    componentId = 0xfa3,
+                    para = shortArrayOf(
+                        0, 0, 0, 0, 0, 0
+                    )
+                ),
             )
         )
     )
-    return productInfo
+    return profile
 }
 
 fun formatValue(value: String) {
@@ -168,54 +148,26 @@ fun formatValue(value: String) {
     }
 }
 
-private fun calculateCRC1(data: ByteArray): Short {
-    var fcs = 0xFFFF
-    var index = 0
-    var remaining = data.size
-    while (remaining > 0) {
-        val fcstabIndex = (fcs xor data[index].toInt()) and 0xFF
-        fcs = (fcs shr 8) xor fcstab[fcstabIndex]
-        println("data: ${data[index].toInt()},fcsIndex: $fcstabIndex, tab: ${fcstab[fcstabIndex]}, fcs: $fcs")
-        index++
-        remaining--
-    }
-    return fcs.toShort()
-}
-
 private fun serializeProductInfo(command: String): ByteArray {
-    val productInfo = Json.decodeFromString<ProductInfo>(command)
+    val productInfo = Json.decodeFromString<ProductProfile>(command)
     serializeBuffer.clear()
     serializeBuffer.putShort(productInfo.productId)
-    serializeBuffer.putShort(productInfo.componentList.componentNum)
+    serializeBuffer.putShort(productInfo.preFlush)
+    serializeBuffer.putShort(productInfo.postFlush)
+    serializeBuffer.putShort(productInfo.componentProfileList.componentNum)
 
-    val componentSize = productInfo.componentList.singleComponent.size
+    val componentSize = productInfo.componentProfileList.componentList.size
     for (i in 0 until MAX_COMPONENT) {
         if (i < componentSize) {
-            val singleComponent = productInfo.componentList.singleComponent[i]
-            serializeBuffer.putShort(singleComponent.componentId)
-            for (dosage in singleComponent.dosage) {
-                serializeBuffer.putShort(dosage)
+            val componentProfile = productInfo.componentProfileList.componentList[i]
+            serializeBuffer.putShort(componentProfile.componentId)
+            for (para in componentProfile.para) {
+                serializeBuffer.putShort(para)
             }
         } else {
             serializeBuffer.putShort(0)
         }
     }
-
-    serializeBuffer.putShort(productInfo.treeList.treeLen)
-    val treeSize = productInfo.treeList.singleTree.size
-    for (i in 0 until MAX_TREE) {
-        if (i < treeSize) {
-            val tree = productInfo.treeList.singleTree[i]
-            serializeBuffer.putShort(tree.treeNr)
-            serializeBuffer.putShort(tree.componentId)
-            serializeBuffer.putShort(tree.sendComponentId)
-            serializeBuffer.putShort(tree.receiveComponentId)
-            serializeBuffer.putShort(tree.conflictComponentId)
-        } else {
-            serializeBuffer.putShort(0)
-        }
-    }
-
     serializeBuffer.flip()
     val result = ByteArray(serializeBuffer.limit())
     serializeBuffer.get(result)
@@ -224,8 +176,6 @@ private fun serializeProductInfo(command: String): ByteArray {
 
 private fun calculateCRC(buffer: ByteBuffer): Short {
     val hexString = buffer.toHexString()
-//    val hexString =
-//        "02 01 58 00 64 00 01 00 04 00 b8 0b bb 34 56 78 ab cd ef ee e8 03 bb 34 56 78 ab cd ef ee d0 07 bb 34 56 78 ab cd ef ee a0 0f bb 34 56 78 ab cd ef ee 04 00 00 00 b8 0b 00 00 e8 03 00 00 01 00 e8 03 b8 0b 00 00 00 00 02 00 a0 0f 00 00 00 00 00 00 03 00 d0 07 00 00 e8 03 00 00"
     val data = hexString.windowed(2, 3).map { it.trim().lowercase().toInt(16) }
     var crc = 0xFFFF
     for (item in data) {
