@@ -3,7 +3,7 @@ package com.inno.serialport.function.driver
 import com.inno.serialport.utilities.PullBufInfo
 
 interface IDriver {
-    fun send(command: String)
+    fun send(command: Short, content: String)
     suspend fun receive(): PullBufInfo
     fun open()
     fun close()
