@@ -89,3 +89,39 @@ componentProfileList: ComponentProfileList)
 //		},
 //	},
 //};
+// send
+// 7E //包头
+// 02 //地址
+// 01 //控制
+// 6C 00 //长度
+// 64 00 //指令
+// 01 00 // product id
+// 00 00 // ifPreFlush
+// 00 00 // ifPostFlush
+// 07 00 // componentNum
+// B8 0B // componentId
+// 8C 00 00 00 00 00 00 00 00 00 00 00 // para
+// E8 03
+// 14 00 20 03 D0 07 00 00 00 00 00 00
+// D0 07
+// 32 00 96 00 00 00 01 00 00 00 00 00
+// 88 13
+// 00 00 00 00 00 00 00 00 00 00 00 00
+// A0 0F
+// 00 00 00 00 00 00 00 00 00 00 00 00
+// A2 0F
+// 00 00 00 00 00 00 00 00 00 00 00 00
+// A3 0F
+// 00 00 00 00 00 00 00 00 00 00 00 00
+// C1 38 // crc
+// 7E
+
+// replay
+//7E //包头
+//02 //地址
+//02 //控制
+//04 00 //长度
+//64 00 //指令
+//00 00 //结果： 0：success, 其他： fault
+//FC BB //crc
+//7E
